test code in CorpusGP